# 42-Python-for-Data-Science

./: .gitignore  LICENCE  README.md  pyproject.toml
0-Starting/ex01/: format_ft_time.py
0-Starting/ex02/: tester.py
0-Starting/ex04/: whatis.py
0-Starting/ex05/: building.py
0-Starting/ex06/: filterstring.py  ft_filter.py
0-Starting/ex07/: sos.py
0-Starting/ex08/: Loading.py
1-Array/ex00/: give_bmi.py
1-Array/ex01/: array2D.py
1-Array/ex02/: load_image.py  tester.py
1-Array/ex03/: zoom.py
1-Array/ex04/: rotate.py
1-Array/ex05/: pimp_image.py  tester.py
2-Datatable/ex00/: load_csv.py
2-Datatable/ex01/: aff_life.py
2-Datatable/ex02/: aff_pop.py  load_csv.py
2-Datatable/ex03/: projection_life.py
3-OOP/ex00/: S1E9.py
3-OOP/ex01/: S1E7.py
3-OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
3-OOP/ex03/: ft_calculator.py
3-OOP/ex04/: ft_calculator.py
4-Dod/ex00/: statistics.py  tester.py
4-Dod/ex01/: in_out.py
4-Dod/ex02/: callLimit.py
4-Dod/ex03/: new_student.py  tester.py
Python - 0 - Starting/ex01/: format_ft_time.py
Python - 0 - Starting/ex03/: NULL_not_found.py
Python - 0 - Starting/ex04/: whatis.py
Python - 0 - Starting/ex06/: ft_filter.py
Python - 0 - Starting/ex07/: sos.py
Python - 0 - Starting/ex09/: tester.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py  tester.py
ex04/: tester.py  whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py  tester.py
ex08/: Loading.py  tester.py
ex09/ft_package/: README.md  count_in_list.py  pyproject.toml
(+3 files in other folders)
