[project]
name = "42-python-for-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "build>=1.3.0",
    "flake8>=7.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pip>=26.0.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
